<resources>
    <string name="server_address1" translatable="false">http://192.168.1.4/ilriccone</string>
    <string name="server_address" translatable="false">http://10.0.2.2/ilriccone</string>
    <string name="app_name">il riccone</string>
    <string name="login">Login Page</string>
    <string name="password_too_long">Too Long Password</string>
    <string name="username_too_long">Too Long Username</string>
    <string name="unsuccessful_login">WRONG Username or Password</string>

    <string-array name="theme_array">
        <item>Material-Light</item>
        <item>YOUR-CUSTOM-THEME-NAME</item>
    </string-array>

    <string name="category_1">history</string>
    <string name="category_2">geography</string>
    <string name="category_3">computers</string>
    <string name="category_4">vehicles</string>

    <string name="difficulty_1">easy</string>
    <string name="difficulty_2">medium</string>
    <string name="difficulty_3">hard</string>
    <string name="title_activity_side_drawer" translatable="false">SideDrawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_scores">Scores</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="no_intern_available">Internet is NOT available</string>
    <string name="settings">Settings</string>
    <string name="user_already_in">Username is taken</string>
    <string name="scores">Scores</string>
    <string name="question_counter_pre">question: %1$d/10</string>
    <string name="quitz_result_goto_home" translatable="false">Home</string>
    <string name="quiz_result_category">Category : %1$s</string>
    <string name="quiz_result_difficulty">Difficulty : %1$s</string>
    <string name="quiz_result_score">Score : %1$s pts</string>
    <string name="quiz_result_best_score">Best Score : %1$s pts</string>
    <string name="place_empty" translatable="false">path not valid</string>
    <string name="chose_picture">Pick a profile picture</string>
    <string name="pts" translatable="false">pts.</string>
    <string name="language_string">Language</string>
    <string name="theme_string">Theme</string>
    <string name="change_language">Choose a language:</string>

    <string name="category_1_code" translatable="false">23</string>
    <string name="category_2_code" translatable="false">22</string>
    <string name="category_3_code" translatable="false">18</string>
    <string name="category_4_code" translatable="false">28</string>
    <string name="upload_image_to_server" translatable="false">/uploadImage.php?</string>
    <string name="get_image_server" translatable="false">getUserImage.php?</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="theme_light">light</string>
    <string name="theme_dark">dark</string>
    <string name="change_theme">change theme</string>
    <string name="menu_image">Change Image</string>
    <string name="logout_string">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>
