<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ilriccone.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
        <action
            android:id="@+id/action_nav_home_to_nav_scores2"
            app:destination="@id/nav_scores" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.ilriccone.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_scores"
        android:name="com.example.ilriccone.ui.score.ScoreFragment"
        android:label="@string/menu_scores"
        tools:layout="@layout/fragment_scores" />

    <fragment
        android:id="@+id/nav_image"
        android:name="com.example.ilriccone.ui.profile_image.ProfileImageFragment"
        android:label="@string/menu_image"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.ilriccone.ui.settings.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.ilriccone.ui.logout.LogoutFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>