<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_difficulty"
    tools:context=".SideDrawer">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sfondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="151dp"
        android:layout_height="175dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/buttonCat1"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonDif1"
        android:layout_width="211dp"
        android:layout_height="50dp"
        android:background="@drawable/refined_answer_diff_1_button"
        android:text="@string/difficulty_1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonDif2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonDif2"
        android:layout_width="211dp"
        android:layout_height="50dp"
        android:background="@drawable/refined_answer_diff_2_button"
        android:text="@string/difficulty_2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonDif3"
        app:layout_constraintTop_toBottomOf="@+id/buttonDif1"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />

    <Button
        android:id="@+id/buttonDif3"
        android:layout_width="211dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/refined_answer_diff_3_button"
        android:text="@string/difficulty_3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:translationZ="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.5"
        android:id="@+id/loading_constraint_layout">

        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/dif2"
            android:indeterminateTintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>