<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.score.ScoreFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sfondo">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_transp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    app:layout_constraintTop_toBottomOf="@id/constraintLayout3"
                    tools:layout_editor_absoluteX="0dp">

                    <TextView
                        android:id="@+id/score_category_label_1"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/score_category_label_2"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/score_category_label_1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/score_category_1"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_corners_color_1"
                        android:paddingVertical="20dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/score_category_2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/score_category_label_1" />

                    <TextView
                        android:id="@+id/score_category_2"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/rounded_corners_color_1"
                        android:paddingVertical="20dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/score_category_1"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/score_category_label_2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/constraintLayout2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp">

                    <TextView
                        android:id="@+id/score_category_label_3"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/score_category_label_4"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/score_category_label_3"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/score_category_3"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_corners_color_1"
                        android:paddingVertical="20dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/score_category_4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/score_category_label_3" />

                    <TextView
                        android:id="@+id/score_category_4"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/rounded_corners_color_1"
                        android:paddingVertical="20dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/score_category_3"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/score_category_label_4" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_weight=".7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AAAAAAAA">

            <Button
                android:id="@+id/score_btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/refined_answer_diff_1_button"
                android:text="@string/difficulty_1"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/score_btn_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/score_btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/refined_answer_diff_2_button"
                android:text="@string/difficulty_2"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/score_btn_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.675" />

            <Button
                android:id="@+id/score_btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/refined_answer_diff_3_button"
                android:text="@string/difficulty_3"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="84dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>